<resources>
    <string name="app_name">Dent-TA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_button_get_started">Get Started</string>
    <string name="title_on_boarding_first_slide">Early Screening</string>
    <string name="title_on_boarding_second_slide">Daily Treatment</string>
    <string name="title_on_boarding_third_slide">Easy To Use</string>
    <string name="description_on_boarding_first_slide">Identify The Type of Oral Disease  by Taking a Photo, Dent-TA  Will Screening and Analyse</string>
    <string name="description_on_boarding_second_slide">Daily Treatment Suggestion Before and After Dental-Checkup</string>
    <string name="description_on_boarding_third_slide">Simple and Easy to Use for You, Use It Anytime and Anywhere You Like</string>
    <string name="welcome_image_login">Welcome Image Login</string>
    <string name="welcome_image_signup">Welcome Image SignUp</string>
    <string name="image_guide">Gambar Arahan</string>
    <string name="back_button">Tombol Kembali</string>
    <string name="edit_button">Edit Button</string>
    <string name="retake">Retake</string>
    <string name="check">Check</string>
    <string name="close_camera">Close Camera</string>
    <string name="camera">Kamera</string>
    <string name="switch_camera">Ganti Kamera</string>
    <string name="failed_taken">Gagal mengambil gambar</string>
    <string name="guide1">• Pastikan Anda mengunggah foto gigi yang diambil menggunakan kamera.</string>
    <string name="guide2">• Gambar yang akan digunakan adalah bagian depan gigi.</string>
    <string name="guide3">• Pastikan saat pengambilan gambar mengikuti guideline.</string>
    <string name="guide4">• Pastikan saat mengambil gambar memiliki pencahayan yang cukup.</string>
    <string name="take_image">Ambil Gambar</string>
    <string name="daily_treatment">Daily Treatment</string>
    <string name="detail">Detail</string>
    <string name="delete_image">Hapus Gambar</string>
    <string name="history">History</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="button_login">Masuk</string>
    <string name="dont_have_acc">Belum punya akun?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint">Nama</string>
    <string name="button_signup">Daftar</string>
    <string name="have_acc">Sudah Punya Akun?</string>
    <string name="pass_not_same">Password tidak sama</string>
    <string name="register_success">Register Success</string>
    <string name="form_warn">Tidak boleh ada kolom yang kosong</string>
    <string name="apakah_berbahaya">Apakah Berbahaya?</string>
    <string name="similar">Similar</string>
    <string name="periodontal">Periodontal</string>
    <string name="periodontal_desc">Periodontitis merupakan salah satu komplikasi dari radang gusi yang tidak terobati. Jika kondisi ini terjadi dalam jangka panjang, jaringan di sekitar gusi dan gigi akan rusak sehingga menyebabkan gigi tanggal.</string>
    <string name="risk_perio">Seiring waktu, bakteri di karang gigi tadi akan menghasilkan racun yang dapat menyebabkan peradangan dan iritasi gusi di sekitar gigi (gingiva). Jika tidak segera diobati, radang gusi tersebut dapat menyebabkan terbentuknya celah di gusi yang memisahkan jaringan gusi dengan gigi. Celah tersebut menyebabkan bakteri dapat menginfeksi lebih dalam lagi sehingga merusak jaringan dan tulang di dalam gusi.</string>
    <string name="discoloration">Discoloration</string>
    <string name="discoloration_desc">Diskolorasi ekstrinsik disebabkan karena adanya penodaan (staining) akibat warna bahan makanan dan minuman yang dikonsumsi. Sehingga menyebabkan terbentuknya noda yang menempel pada permukaan gigi maupun bahan tambal gigi.</string>
    <string name="risk_dicoloration">Diskolorasi pada gigi dapat diperbaiki dengan menggunakan bahan pemutih gigi atau yang disebut dengan bleaching. Bleaching adalah tindakan untuk meningkatkan warna gigi menjadi lebih putih dari sebelumnya. Jenisnya ada berbagai macam, antara lain menggunakan zat kimia hidrogen peroksida dan karbamid peroksida dengan berbagai konsentrasi.</string>
    <string name="healthy">Healthy</string>
    <string name="healthy_desc">Healthy Teeth, bagian atas dan bawah gigi tetap utuh, tidak ada lubang ataupun lekukan yang membuat kasar. Bebas plak, gigi yang putih dan tidak ada noda di sana-sini.</string>
    <string name="risk_heath">Gigi anda termasuk dalam gigi sehat, untuk meningkatkanya, lakukan beberapa perawatan gigi seperti, gosok gigi secara teratur, dan menjaga makanan yang dimakan agar gigi anda tetap sehat.</string>
    <string name="check_oral_health">Check Oral Health!</string>
    <string name="guide_home1">• Mulai check kesehatan gigi sekarang juga.</string>
    <string name="guide_home2">• Cegah kerusakan gigi lebih awal dengan perawatan mandiri.</string>
    <string name="guide_home3">• Dapatkan perawatan mandiri sesuai dengan kesehatan gigi anda.</string>
    <string name="self_care">Self Care</string>
    <string name="dietary_habit">Dietary Habit</string>
    <string name="dietary_habit_desc">Makanan atau minuman yang masih panas atau dingin dan konsumsi makanan dan minuman manis  berpotensi untuk merusak gigi. Lebih jauh, hal itu bahkan dapat membuat keretakan gigi yang membuat bakteri dan kuman dapat dengan mudah masuk kedalam struktur gigi. Lebih baik konsumsi makanan-makanan yang mengandung serat, seperti dalam buah-buahan segar dapat membantu membersihkan kotoran dan sisa makanan yang menempel pada gigi.</string>
    <string name="hydrogen_peroxide">Hydrogen Peroxide</string>
    <string name="hydrogen_peroxide_desc">Zat ini seringkali dapat ditemukan pada obat kumur, seperti Listerine atau Coolgate. Gunakan setelah menggosok gigi, dengan ini pencegahan noda gigi akan lebih maksimal.</string>
    <string name="brushing_teeth">Brushing Teeth</string>
    <string name="brushing_teeth_desc">Kebiasaan menyikat gigi secara rutin selama 2 menit, terutama setelah mengonsumsi makanan dan minuman pemicu noda gigi, bisa mengatasi masalah noda pada gigi.</string>
    <string name="flossing">Flossing</string>
    <string name="flossing_desc">Menggosok ruas gigi menggunakan benang gigi dapat membantu mengurangi risiko yang ditimbulkan plak. Selain itu juga dapat membersihkan ruang antar gigi dari bakteri yang bisa menyebabkan gigi berlubang.</string>
    <string name="avoid_smoking">Avoid Smoking</string>
    <string name="avoid_smoking_desc">Merokok merupakan penyebab kerusakan gigi yang paling parah, karena dampak dari merokok untuk kesehatan gigi sangat banyak. Diantaranya adalah, kerusakan pada gigi, peradangan pada gusi, gigi tanggal, noda pada gigi, bau mulut, hingga dapat menyebabkan kanker mulut. </string>
    <string name="dentist_checkup">Dental Checkup</string>
    <string name="dentist_checkup_desc">Melakukan pemeriksaan ke Dokter gigi untuk mendapatkan perawatan dan saran lebih lanjut.</string>
    <string name="change_brush">Change Brush</string>
    <string name="change_brush_desc">Ganti sikat gigi setiap 3 bulan sekali. Setelah 3 bulan, umumnya bulu sikat gigi sudah mulai usang, sehingga perlu diganti yang baru. Sikat gigi yang usang dapat menjadi sarang virus dan bakteri.</string>
    <string name="mandatory">Wajib</string>
    <string name="two_times_a_day">2x Perhari</string>
    <string name="optional">Opsional</string>
    <string name="once_per_six_month">1x/ 6 Bulan</string>
    <string name="once_per_three_month">1x/ 3 Bulan</string>
    <string name="periodontal_treatment">Berikut adalah cara untuk merawat gigi Periodontitis secara mandiri</string>
    <string name="salt_water">Salt Water</string>
    <string name="salt_water_desc">Air garam dapat digunakan sebagai obat kumur yang sangak efektif sebagai antiseptik. Ambil segelas air hangat, tambahkan 1 sendok teh garam dan aduk hingga merata, kemudian kumur-kumur selama 30-40 detik, pastikan tidak meminum air ini, dan muntahkan saat selesai. Ulangi proses ini 2 - 3 kali sehari.</string>
    <string name="oil_pulling">Oil Pulling</string>
    <string name="oil_pulling_desc">Berkumur dengan minyak kelapa diketahui dapat memutihkan gigi, menyegarkan nafas, dan membunuh bakteri mulut. Ambil 1 sendok makan minyak kelapa ke mulut, biarkan larut, dan kumur dengan lembut selama 15-30 menit. Muntahkan minyak setelah selesai, lalu bilas dengan air hangat, dan gosok gigi.</string>
    <string name="tea_tree_oil">Tea Tree Oil</string>
    <string name="tea_tree_oil_desc">Minyak pohon teh, merupakan salah satu antibakterial yang berpontesi untuk menghancurkan bakteri di dalam mulut. Ambil segelas air hangat, tambahkan 1 sendok teh minyak teh dan bilas mulut sekitar 60 detik. Muntahkan setelah selesai, dan dilanjutkan dengan gosok gigi seperti biasa.</string>
    <string name="turmeric">Turmeric</string>
    <string name="turmeric_desc">Kunyit mungkin seperti bumbu dapur biasa, namun sebenarnya dapat digunakan untuk membantu meringankan bahkan mengobata penyakit gigi. Kunyit mengandung Kurkumin yang merupakan anti-inflamasi yang sangat kuat.</string>
    <string name="oral_probiotics">Oral Probiotics</string>
    <string name="oral_probiotics_desc">Mengkomsusi probiotik oral dapat membantu mengurangi penumpukan plak pada gigi dan mengurangi bakteri, ditambah lagi dapat meredakan peradangan yang disebabkan oleh penyakit gusi.</string>
    <string name="discoloration_treatment">Berikut adalah cara untuk merawat gigi Diskolorasi secara mandiri</string>
    <string name="high_fiber_foods">High Fiber Foods</string>
    <string name="high_fiber_foods_desc">Mengonsumsi makanan berserat tinggi dapat membantu menetralisir asam pada gigi dan meelindungi enamel pada gigi. Makanan yang berserat tinggi diantaranya adalah Kacang, Brokoli, Alpukat, Apel, dan masih banyak lagi.</string>
    <string name="healthy_treatment">Berikut adalah cara untuk merawat gigi, agar tetap sehat</string>
    <string name="eat_fresh_fruit">Eat Fresh Fruit</string>
    <string name="eat_fresh_fruit_desc">Serat dalam buah-buahan segar dapat membantu membersihkan kotoran dan sisa makanan yang menempel pada gigi.</string>
    <string name="chewing_gum">Chewing Gum</string>
    <string name="chewing_gum_desc">Mengunyah permen karet dapat melatih otot mulut, merangsang produksi air liur. Meningkatnya kuantitas air liur dapat membersihkan partikel asam dari sisa makanan di dalam mulut. Perlu diingat, hal ini hanya bisa dihasilkan oleh permen karet yang tidak mengandung gula.</string>
    <string name="change_password">Ganti Password</string>
    <string name="enter_new_password">Masukkan Password Baru</string>
    <string name="new_password">Password baru</string>
    <string name="confirm_password">Konfirmasi password</string>
    <string name="update">Update</string>
    <string name="change_email">Ganti Email</string>
    <string name="enter_your_password">Masukkan Password Anda</string>
    <string name="enter_new_email">Masukkan Email Baru</string>
    <string name="poin">Poin</string>
    <string name="doctor_name_dummy">Hand Oko</string>
    <string name="dummy_user_name">Joko Santoso</string>
    <string name="services">Services</string>
    <string name="medicine_reminder">Medicine\nReminder</string>
    <string name="information">Information</string>
    <string name="information_image">Gambar Informasi</string>
    <string name="information_title">Judul</string>
    <string name="see_more">Selengkapnya</string>
    <string name="upload_teeth">Upload Teeth</string>
    <string name="treatment_warn">Harap lakukan scan gigi terlebih dahulu untuk mendapatkan rekomendasi perawatan harian</string>
    <string name="month_year">July 2022</string>
    <string name="days_progress">∞ Days</string>
    <string name="no_data_available">Belum Ada Data Tersimpan</string>
</resources>